--- a/src/MiniC2Eeyore/Makefile
+++ b/src/MiniC2Eeyore/Makefile
@@ -1,10 +1,10 @@
-all:    minic
+all:	eeyore
 
-minic:   minic.lex minic.y tree.h tree.c
+eeyore:	minic.lex minic.y tree.h tree.c symtab.h symtab.c error.h error.c transform.h transform.c
 	bison -d -y minic.y
 	flex minic.lex
 	gcc -c tree.h tree.c symtab.h symtab.c error.h error.c transform.h transform.c y.tab.h y.tab.c lex.yy.c
 	gcc tree.o symtab.o error.o transform.o y.tab.o lex.yy.o -o $@ -lm
 
 clean:
-	rm -rf minic *.o lex.yy.* y.tab.* *.gch
+	rm -rf eeyore *.o lex.yy.* y.tab.* *.gch
