fix a comment bug

--- a/src/Tigger2RISCV/Makefile
+++ b/src/Tigger2RISCV/Makefile
@@ -1,9 +1,9 @@
 all: merge.c
 	(cd tigger2riscv; make)
-	g++ -o riscvC merge.c
+	g++ -o riscv64C merge.c
 
 clean:
 	(cd tigger2riscv; make clean)
-	rm -rf riscvC
+	rm -rf riscv64C
 	rm -rf *.log
 	rm -rf *.out
